Micro tab: Fixed: Kit 2, removing NaCl also removes all Cl from the CaCl2
Micro tab: Fixed: Kit 3, exception on removing sodium nitrate from a mixed solution
Micro tab: Fixed: When toggling back and forth between kits, sometimes bar chart labels appear under the kit box, not in the bar chart background
Micro tab: Added crystallization for sodium nitrate
Micro tab: Increased the requested amount of CaCl2 because otherwise it is too difficult to get it to crystallize before the water is almost completely evaporated
Micro tab: Model saturated property instead of unsaturated property
Micro tab: Added incremental crystallization of sucrose
Micro tab: Generalized crystal growth algorithm to make it easier to add support for other solutes
Micro tab: Reset the water level when changing kits
Micro tab: Fixed: Using up one solute causes the other solute in the kit to be empty
Micro tab: Added limits to amount of ethanol that can be added
Micro tab: Moved the "remove sugar" and "remove salt" buttons below the beaker to the right of the evaporation box, and have it vertically stacked
Micro tab: Added button to remove all Calcium Chloride
Micro tab: Added button to remove all Ethanol
Micro tab: Added button to remove all sodium nitrate
Micro tab: Moved RemoveSoluteControlNode to Macro tab only, Micro module will need another implementation
Micro tab: Fixed: Prevent crystal sites from forming on top of existing crystal components
Micro tab: Fixed: During steady state, particle gets faster and faster
Micro tab: Fixed: Crystals should dissolve gradually instead of completely to better match saturation point behavior
Micro tab: Refactoring to remove dependency on Lattice classes for crystal construction, dissolving or growing
Micro tab: Only dissolve particles that are submerged in the fluid
Micro tab: Made crystals dissolve incrementally
Micro tab: Fixed a bug in incremental crystallization where a binding site was at the wrong angle